# vetter-cli

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
docs/: IDEA.md  PRD.md  TDD.md
docs/ADRs/: 001-rebrand-to-vetter.md
docs/plans/: 002-improve-cli-help.md
docs/prompts/: 01-idea-to-prd.md  02-prd-to-tdd.md
src/the_driver/: __init__.py  cli.py  ingester.py  report.py  reviewer.py  scanner.py
src/vetter/: cli.py  ingester.py  models.py  report.py  reviewer.py  scanner.py
src/vetter/templates/: report.md.j2
tests/: test_ingester.py  test_report.py  test_reviewer.py  test_scanner.py
